--- a/mbl-web/src/app/app.component.html
+++ b/mbl-web/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar bg-primary">
     <div class="container-fluid d-flex justify-content-center">
-      <a class="navbar-brand text-light" href="/bikes"><h1>My Bike List</h1></a>
+      <a class="navbar-brand text-light" href="/bikes"><h1>My Bike Studio</h1></a>
     </div>
   </nav>
 </header>
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="text-center p-3 text-light">
         © 2024 Copyright:
-        <a class="text-light" href="https://github.com/JMO3E">My Bike List Repository</a>
+        <a class="text-light" href="https://github.com/JMO3E">My Bike Studio Repository</a>
       </div>
     </div>
   </div>
